fixed issue with user container on mobile devices.

--- a/API/client/src/index.css
+++ b/API/client/src/index.css
@@ -537,7 +537,7 @@ div.buy-quantity {
 
   .user-container {
     margin: auto !important;
-    height: 38%;
+    height: 42%;
     margin-top: 9px !important;
     margin-bottom: 9px !important;
   }
@@ -571,8 +571,8 @@ div.buy-quantity {
 
   #formGridZip.total-modal-input {
     width: 80px !important;
-    margin-right: 2rem !important;
-    width: 6.9rem !important;
+    margin-right: 1rem !important;
+    width: 6rem !important;
     border-radius: 0;
   }
 
